syntax = "proto3";

package example;

option go_package = "github.com/ishii1648/slack-bot-fleet/api/services/example";

service Example {
    rpc Reply (Request) returns (Result) {}
}

message Request {
    string reaction = 1;
    string itemUser = 2;
    EventItem item = 3;
}

message EventItem {
    string channelID = 1;
    string msgTimestamp = 2;
}

message Result {
    string message = 1;
}